<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FFFF00"

    tools:context="comli.example.c4q.testing.mainthings.LoginActivity">


    <EditText
        android:id="@+id/username"
        android:paddingTop="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColorHint="#0011ff"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:textColorHint="#0011ff"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFF00"
        android:textColor="#0011ff"
        android:textStyle="bold"
        android:text="@string/submit_login" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/funnydog"


        />

</LinearLayout>
