<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFC0CB"
    tools:context="comli.example.c4q.testing.BreedsActivity">

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_header_string"
        android:textColor="#FFFFFF"

        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/terrier_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFC0CB"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/terrier"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="46sp"
                    android:paddingStart="20dp"
                    android:layout_weight="4"/>
                <ImageView
                    android:id="@+id/terrier"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/spaniel_layout"
                android:layout_width="match_parent"
                android:background="#FFC0CB"

                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/spaniel"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="46sp"
                    android:paddingStart="20dp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="4"/>
                <ImageView
                    android:id="@+id/spaniel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/retriever_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFC0CB"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/retriever"
                    android:textSize="46sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:paddingStart="20dp"
                    android:layout_weight="4"/>
                <ImageView
                    android:id="@+id/retriever"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:id="@+id/poodle_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFC0CB"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/poodle"
                    android:textSize="46sp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:paddingStart="20dp"
                    android:layout_weight="4"/>
                <ImageView
                    android:id="@+id/poodle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


</LinearLayout>

</LinearLayout>

